--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>S Graham map template hist3907b</title>
+    <title>Sprinkles</title>
 
     
     <!-- Bootstrap core CSS -->
